[Hotspot] Refactor Reference and Cleaner handling to fix Unsafe native link errors
Refactor the Reference and Cleaner handling logic in CVM to simplify the
reference dispatch mechanism and remove unnecessary dependencies on JDK 17
Reference/Cleaner implementations. This change eliminates excessive coupling
with JDK 17-specific classes and fundamentally resolves the Unsafe native
link errors introduced by jdk.internal.misc.Cleaner.